# CyanArgParser

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
CyanArgParser/: CMakeLists.txt  CMakePresets.json
CyanArgParser/include/: argParser.hpp
CyanArgParser/src/: argParser.cpp
CyanArgParser/testing/: CMakeLists.txt  main.cpp
include/: argParser.hpp
src/: argParser.cpp
tests/: CMakeLists.txt  main.cpp
